# vg-csg

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: csg-performance-fixtures.md  realtime-csg-bevy-assembler.md  realtime-csg-doctrine.md
examples/: csg_perf_fixture.rs  csg_room.rs  dream_machine_level.rs  industrial_maintenance_loop.rs  ragnarok_cultcache_export.rs
src/: assembler.rs  brush.rs  convex.rs  cult_geometry.rs  domain.rs  dsl.rs  frontier.rs  lib.rs  mesh.rs  primitives.rs  tree.rs
tests/: realtime_csg_parity.rs
tools/: run_csg_perf.ps1  run_realtimecsg_cpp_perf.ps1
tools/realtimecsg_native_bridge/: Program.cs  RealtimeCsgNativeBridge.csproj
